vh fix on mobile

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -28,7 +28,8 @@ body {
       grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
   @media only screen and (max-width: 50em) {
     .container {
-      grid-template-rows: 6rem calc(100vh - 6rem); } }
+      grid-template-rows: 6rem calc(100vh - 6rem);
+      grid-template-rows: 6rem calc((var(--vh, 1vh) * 100) - 6rem); } }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
